--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: MAJOR
 Type: Package
 Title: MAJOR: Meta-Analysis for JAMOVI
-Version: 1.0.0
+Version: 1.0.1
 Author: W. Kyle Hamilton
 Maintainer: W. Kyle Hamilton <kyle.hamilton@gmail.com>
 Description: This module allows you to run a meta-analysis and is based on the R package Metafor by Wolfgang Viechtbauer.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports: jmvcore (>= 0.5.5), R6, metafor
+Imports: jmvcore (>= 0.5.5), R6, metafor, weightr
