--- a/jamovi/metacorr.r.yaml
+++ b/jamovi/metacorr.r.yaml
@@ -149,4 +149,8 @@ items:
       height: 450
       renderFun: .funplot
 
+    - name: weightFunctionModel
+      title: Weight-Function Model
+      type: Preformatted
+
 ...
