--- a/jamovi/metadichotomousmodel.r.yaml
+++ b/jamovi/metadichotomousmodel.r.yaml
@@ -147,5 +147,8 @@ items:
       width:  600
       height: 450
       renderFun: .funplot
-
+      
+    - name: weightFunctionModel
+      title: Weight-Function Model
+      type: Preformatted
 ...
