--- a/jamovi/metaproportion.r.yaml
+++ b/jamovi/metaproportion.r.yaml
@@ -149,4 +149,7 @@ items:
       height: 450
       renderFun: .funplot
 
+    - name: weightFunctionModel
+      title: Weight-Function Model
+      type: Preformatted
 ...
