--- a/jamovi/metacorr.u.yaml
+++ b/jamovi/metacorr.u.yaml
@@ -74,6 +74,12 @@ children:
           - type: CheckBox
             name: showweights
           - type: TextBox
+            label: X-Axis Steps
+            name: steps
+            format: number
+            stretchFactor: 2
+            useSingleCell: true
+          - type: TextBox
             label: X-Axis Title
             name: xAxisTitle
             format: string
