added point options for forest plots
only in corr for right now but I'll add it to the other analysis
sections later

--- a/jamovi/metacorr.u.yaml
+++ b/jamovi/metacorr.u.yaml
@@ -86,6 +86,9 @@ children:
             stretchFactor: 2
             useSingleCell: true
           - type: ComboBox
+            name: pchForest
+            useSingleCell: true
+          - type: ComboBox
             name: forestOrder
             useSingleCell: true
       - type: Label
