Added moderator options for all analyses

--- a/jamovi/metaalpha.a.yaml
+++ b/jamovi/metaalpha.a.yaml
@@ -79,6 +79,16 @@ options:
           title: Log transformed ratio of means
       default: ARAW
 
+    - name: moderatorType
+      title: Moderator type
+      type: List
+      options:
+        - name: "CAT"
+          title: Categorical moderator
+        - name: "CON"
+          title: Continuous moderator
+      default: CON
+      
     - name: level
       type: Number
       title: Confidence interval level
