--- a/jamovi/metadv.a.yaml
+++ b/jamovi/metadv.a.yaml
@@ -59,6 +59,16 @@ options:
           title: Fixed-Effect
       default: REML
 
+    - name: moderatorType
+      title: Moderator type
+      type: List
+      options:
+        - name: "CAT"
+          title: Categorical moderator
+        - name: "CON"
+          title: Continuous moderator
+      default: CON
+      
     - name: level
       type: Number
       title: Confidence interval level
