--- a/jamovi/metameandiff.u.yaml
+++ b/jamovi/metameandiff.u.yaml
@@ -78,6 +78,9 @@ children:
           - type: ComboBox
             name: cormeasure
             useSingleCell: true
+          - type: ComboBox
+            name: moderatorType
+            useSingleCell: true
           - type: TextBox
             name: level
             format: number
