--- a/jamovi/metadichotomousmodel.a.yaml
+++ b/jamovi/metadichotomousmodel.a.yaml
@@ -87,6 +87,16 @@ options:
           title: Log odds ratio peto's method
       default: OR
 
+    - name: moderatorType
+      title: Moderator type
+      type: List
+      options:
+        - name: "CAT"
+          title: Categorical moderator
+        - name: "CON"
+          title: Continuous moderator
+      default: CON
+      
     - name: level
       type: Number
       title: Confidence interval level
