--- a/jamovi/metameandiff.a.yaml
+++ b/jamovi/metameandiff.a.yaml
@@ -97,6 +97,16 @@ options:
           title: Log Transformed Ratio of Means
       default: SMD
 
+    - name: moderatorType
+      title: Moderator type
+      type: List
+      options:
+        - name: "CAT"
+          title: Categorical moderator
+        - name: "CON"
+          title: Continuous moderator
+      default: CON
+      
     - name: level
       type: Number
       title: Confidence interval level
