Added last mods, Bayes MA SMD
Last mods fixed for all analyses. Added new analysis option Bayes MA SMD.

--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -52,5 +52,10 @@ analyses:
     menuGroup: MAJOR
     menuTitle: Correlation Coefficients
     menuSubgroup: Bayesian Meta Analysis
+  - title: Mean Differences
+    name: bayesmetasmd
+    ns: MAJOR
+    menuGroup: MAJOR
+    menuTitle: Mean Differences
 
 ...
