Odds Ratio is now an option
Is it good? Sure. Do I need to work on it some more? Yes.

--- a/jamovi/metadichotomousmodel.a.yaml
+++ b/jamovi/metadichotomousmodel.a.yaml
@@ -87,6 +87,11 @@ options:
           title: Log odds ratio peto's method
       default: OR
 
+    - name: showBackTransform
+      title: Back-Transform Log Odds Ratio to Odds Ratio
+      type: Bool
+      default: FALSE
+      
     - name: moderatorType
       title: Moderator type
       type: List
