--- a/jamovi/metaalpha.r.yaml
+++ b/jamovi/metaalpha.r.yaml
@@ -7,6 +7,7 @@ items:
 
     - name:  textRICH
       type: Table
+      refs: [ metafor ]
       title: "Random-Effects Model"
       rows:  2
       columns:
@@ -99,6 +100,7 @@ items:
       width:  600
       height: 450
       renderFun: .plot
+      refs: [ metafor ]
 
     - name: pubBias
       title: Publication Bias Assessment
@@ -148,4 +150,5 @@ items:
       width:  600
       height: 450
       renderFun: .funplot
+      refs: [ metafor ]
 ...
