--- a/jamovi/metadichotomousmodel.r.yaml
+++ b/jamovi/metadichotomousmodel.r.yaml
@@ -6,6 +6,7 @@ jrs:   '1.1'
 items:
     - name:  textRICH
       type: Table
+      refs: [ metafor ]
       title: "Random-Effects Model"
       rows:  2
       columns:
@@ -116,6 +117,7 @@ items:
       width:  600
       height: 450
       renderFun: .plot
+      refs: [ metafor ]
 
     - name: pubBias
       title: Publication Bias Assessment
@@ -165,4 +167,5 @@ items:
       width:  600
       height: 450
       renderFun: .funplot
+      refs: [ metafor ]
 ...
