--- a/jamovi/metadv.r.yaml
+++ b/jamovi/metadv.r.yaml
@@ -7,6 +7,7 @@ items:
 
     - name:  textRICH
       type: Table
+      refs: [ metafor ]
       title: "Random-Effects Model"
       rows:  2
       columns:
@@ -99,6 +100,7 @@ items:
       width:  600
       height: 450
       renderFun: .plot
+      refs: [ metafor ]
 
     - name: pubBias
       title: Publication Bias Assessment
@@ -144,6 +146,7 @@ items:
 
         - name:  TOSToutput
           title: "Two One-Sided Tests Equivalence Testing"
+          refs: [ TOSTER ]
           type: Table
           rows:  1
           columns:
@@ -182,4 +185,5 @@ items:
       width:  600
       height: 450
       renderFun: .funplot
+      refs: [ metafor ]
 ...
