--- a/jamovi/metadv.u.yaml
+++ b/jamovi/metadv.u.yaml
@@ -120,21 +120,22 @@ children:
         children:
           - type: ComboBox
             name: fsntype
-  - type: LayoutBox
-    margin: large
+  - type: CollapseBox
+    label: Equivalence Test Options
+    collapsed: true
+    stretchFactor: 1
     children:
-      - type: TextBox
-        name: lowerTOST
-        format: number
-  - type: LayoutBox
-    margin: large
-    children:
-      - type: TextBox
-        name: upperTOST
-        format: number
-  - type: LayoutBox
-    margin: large
-    children:
-      - type: TextBox
-        name: alphaTOST
-        format: number
+      - type: LayoutBox
+        children:
+          - type: TextBox
+            name: lowerTOST
+            format: number
+            useSingleCell: true
+          - type: TextBox
+            name: upperTOST
+            format: number
+            useSingleCell: true
+          - type: TextBox
+            name: alphaTOST
+            format: number
+            useSingleCell: true
