--- a/jamovi/metadv.r.yaml
+++ b/jamovi/metadv.r.yaml
@@ -143,7 +143,15 @@ items:
             - name: p
               type: number
               format: zto,pvalue
-
+              
+        - name: funplot
+          title: Funnel Plot
+          type: Image
+          width:  600
+          height: 450
+          renderFun: .funplot
+          refs: [ metafor ]
+          
         - name:  TOSToutput
           title: "Two One-Sided Tests Equivalence Testing"
           refs: [ TOSTER ]
@@ -179,11 +187,16 @@ items:
               type: number
               format: zto
               
-    - name: funplot
-      title: Funnel Plot
+        - name:  TOSToutputtext
+          title: "Two One-Sided Tests Equivalence Testing: Text Summary"
+          type: Preformatted
+
+    - name: tostplot
+      title: Equivalence Test Plot
       type: Image
       width:  600
       height: 450
-      renderFun: .funplot
-      refs: [ metafor ]
+      renderFun: .tostplot
+      refs: [ TOSTER ]
+      
 ...
