TOST and Correlations
I need to add the compute.es package but I have to go home right now I'll fix it tomorrow

--- a/jamovi/metacorr.r.yaml
+++ b/jamovi/metacorr.r.yaml
@@ -143,7 +143,53 @@ items:
             - name: p
               type: number
               format: zto,pvalue
+        - name:  TOSToutput
+          title: "Two One-Sided Tests Equivalence Testing"
+          refs: [ TOSTER ]
+          type: Table
+          rows:  1
+          columns:
+            - name: TOST_Z1
+              title: 'Z-Value Lower Bound'
+              type: number
+              format: zto
+            - name: TOST_p1
+              title: 'P-Value Lower Bound'
+              type: number
+              format: zto,pvalue
+            - name: TOST_Z2
+              title: 'Z-Value Upper Bound'
+              type: number
+              format: zto              
+            - name: TOST_p2
+              title: 'P-Value Upper Bound'
+              type: number
+              format: zto
+            - name: LL_CI_TOST
+              type: number
+              format: zto
+            - name: UL_CI_TOST
+              type: number
+              format: zto,pvalue
+            - name: LL_CI_ZTEST
+              type: number
+              format: zto              
+            - name: UL_CI_ZTEST
+              type: number
+              format: zto
+              
+        - name:  TOSToutputtext
+          title: "Two One-Sided Tests Equivalence Testing: Text Summary"
+          type: Preformatted
 
+    - name: tostplot
+      title: Equivalence Test Plot
+      type: Image
+      width:  600
+      height: 450
+      renderFun: .tostplot
+      refs: [ TOSTER ]
+      
     - name: funplot
       title: Funnel Plot
       type: Image
