--- a/jamovi/metadv.r.yaml
+++ b/jamovi/metadv.r.yaml
@@ -102,86 +102,70 @@ items:
       renderFun: .plot
       refs: [ metafor ]
 
-    - name: pubBias
-      title: Publication Bias Assessment
-      type: Group
-      items:
-        - name:  fsnRICH
-          title: "Fail-Safe N Analysis"
-          type: Table
-          rows:  1
-          columns:
-            - name: failSafeNumber
-              title: "Fail-safe N"
-              type: integer
-              format: zto
-            - name: p
-              type: number
-              format: zto,pvalue
 
-        - name:  rankRICH
-          title: "Rank Correlation Test for Funnel Plot Asymmetry"
-          type: Table
-          rows:  1
-          columns:
-            - name: rankTau
-              title: "Kendall's Tau"
-              type: number
-              format: zto
-            - name: p
-              type: number
-              format: zto,pvalue
+    - name:  fsnRICH
+      title: ""
+      type: Table
+      rows:  3
+      columns:
+        - name: label
+          title: 'Test Name'
+          type: text
+        - name: failSafeNumber
+          title: 'value'
+          type: integer
+          format: zto
+        - name: p
+          type: number
+          format: zto,pvalue
 
-        - name:  regRICH
-          title: "Regression Test for Funnel Plot Asymmetry"
-          type: Table
-          rows:  1
-          columns:
-            - name: Z
-              type: number
-              format: zto
-            - name: p
-              type: number
-              format: zto,pvalue
-      
-        - name:  TOSToutput
-          title: "Two One-Sided Tests Equivalence Testing"
-          refs: [ TOSTER ]
-          type: Table
-          rows:  1
-          columns:
-            - name: TOST_Z1
-              title: 'Z-Value Lower Bound'
-              type: number
-              format: zto
-            - name: TOST_p1
-              title: 'P-Value Lower Bound'
-              type: number
-              format: zto,pvalue
-            - name: TOST_Z2
-              title: 'Z-Value Upper Bound'
-              type: number
-              format: zto              
-            - name: TOST_p2
-              title: 'P-Value Upper Bound'
-              type: number
-              format: zto
-            - name: LL_CI_TOST
-              type: number
-              format: zto
-            - name: UL_CI_TOST
-              type: number
-              format: zto,pvalue
-            - name: LL_CI_ZTEST
-              type: number
-              format: zto              
-            - name: UL_CI_ZTEST
-              type: number
-              format: zto
               
-        - name:  TOSToutputtext
-          title: "Two One-Sided Tests Equivalence Testing: Text Summary"
-          type: Preformatted
+    - name: funplot
+      title: Funnel Plot
+      type: Image
+      width:  600
+      height: 450
+      renderFun: .funplot
+      refs: [ metafor ] 
+      
+    - name:  TOSToutput
+      title: "Two One-Sided Tests Equivalence Testing"
+      refs: [ TOSTER ]
+      type: Table
+      rows:  1
+      columns:
+          - name: TOST_Z1
+            title: 'Z-Value Lower Bound'
+            type: number
+            format: zto
+          - name: TOST_p1
+            title: 'P-Value Lower Bound'
+            type: number
+            format: zto,pvalue
+          - name: TOST_Z2
+            title: 'Z-Value Upper Bound'
+            type: number
+            format: zto              
+          - name: TOST_p2
+            title: 'P-Value Upper Bound'
+            type: number
+            format: zto
+          - name: LL_CI_TOST
+            type: number
+            format: zto
+          - name: UL_CI_TOST
+            type: number
+            format: zto,pvalue
+          - name: LL_CI_ZTEST
+            type: number
+            format: zto              
+          - name: UL_CI_ZTEST
+            type: number
+            format: zto
+          
+    - name:  TOSToutputtext
+      title: "Two One-Sided Tests Equivalence Testing: Text Summary"
+      type: Preformatted
 
     - name: tostplot
       title: Equivalence Test Plot
@@ -191,11 +175,5 @@ items:
       renderFun: .tostplot
       refs: [ TOSTER ]
       
-    - name: funplot
-      title: Funnel Plot
-      type: Image
-      width:  600
-      height: 450
-      renderFun: .funplot
-      refs: [ metafor ]      
+     
 ...
