Plots and qq plots added

--- a/jamovi/metadv.a.yaml
+++ b/jamovi/metadv.a.yaml
@@ -212,4 +212,10 @@ options:
       title: Show Summary TOST Report
       type: Bool
       default: true
+      
+    - name: showInfPlot
+      title: Show Plot of Influence Diagnostics
+      type: Bool
+      default: false
+
 ...
