--- a/jamovi/metadv.u.yaml
+++ b/jamovi/metadv.u.yaml
@@ -141,3 +141,5 @@ children:
             useSingleCell: true
           - type: CheckBox
             name: showTestTOST
+          - type: CheckBox
+            name: showInfPlot
