--- a/jamovi/metacorr.u.yaml
+++ b/jamovi/metacorr.u.yaml
@@ -61,6 +61,9 @@ children:
           - type: CheckBox
             name: showModelFit
             useSingleCell: true
+          - type: CheckBox
+            name: showInfPlot
+            useSingleCell: true
   - type: CollapseBox
     label: Plots
     collapsed: true
@@ -124,24 +127,3 @@ children:
           - type: ComboBox
             name: fsntype
             useSingleCell: true
-  - type: CollapseBox
-    label: Equivalence Test Options
-    collapsed: true
-    stretchFactor: 1
-    children:
-      - type: LayoutBox
-        children:
-          - type: TextBox
-            name: lowerTOST
-            format: number
-            useSingleCell: true
-          - type: TextBox
-            name: upperTOST
-            format: number
-            useSingleCell: true
-          - type: TextBox
-            name: alphaTOST
-            format: number
-            useSingleCell: true
-          - type: CheckBox
-            name: showTestTOST
